making python3 compatible

--- a/documents/ms.tex
+++ b/documents/ms.tex
@@ -45,6 +45,8 @@ blah
 \section{Introduction}
 \label{Introduction}
 
+\input{introduction}
+
 \section{Method}
 \label{sec:Method}
 
@@ -64,7 +66,7 @@ This paper includes data collected by the Kepler mission.
 Funding for the Kepler mission is provided by the NASA Science Mission
 directorate.
 
-\bibliographystyle{plainnat}
-\bibliography{k2rotation}
+% \bibliographystyle{plainnat}
+% \bibliography{GProtation}
 
 \end{document}
