--- a/code/tests/Quarters.ipynb
+++ b/code/tests/Quarters.ipynb
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 129,
    "metadata": {
     "collapsed": false
    },
@@ -492,8 +492,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-inf\n",
-      "11.834166049957275\n"
+      "-inf -inf\n",
+      "10.768113851547241\n"
      ]
     }
    ],
@@ -501,7 +501,7 @@
     "# test the lhf works\n",
     "import time\n",
     "start = time.time()\n",
-    "print(lnprob(theta_init, x, y, yerr, plims))\n",
+    "print(lnprob(theta_init, x, y, yerr, plims), lnprior(theta_init, plims))\n",
     "end = time.time()\n",
     "print(end-start)"
    ]
