adding all code from /GProtation/code/tests

--- a/documents/ms.tex
+++ b/documents/ms.tex
@@ -94,9 +94,9 @@ A strictly periodic sinusoid is therefore not a good model for stellar light
 curves.
 In an ideal world, a physical model of the stellar surface would be
 conditioned on the data.
-A physically realistic, generative model would perfectly capture the complexity
-of shapes within stellar light curves as well as the quasi-periodic nature,
-allowing for extremely precise probabilistic period recovery.
+A physically realistic, generative model would perfectly capture the
+complexity of shapes within stellar light curves as well as the quasi-periodic
+nature, allowing for extremely precise probabilistic period recovery.
 However, such physical models require many free parameters in order to
 accurately represent a stellar surface and some of these parameters are
 extremely degenerate \citep[\eg][]{Russell1906, Jeffers2009}.
